Source/WebCore/dom/CharacterData.h
@@ -31,6 +31,8 @@ namespace WebCore {
 class CharacterData : public Node {
 public:
     String data() const { return m_data; }
+    static ptrdiff_t dataMemoryOffset() { return OBJECT_OFFSETOF(CharacterData, m_data); }
+
     void setData(const String&, ExceptionCode&);
     unsigned length() const { return m_data.length(); }
     String substringData(unsigned offset, unsigned count, ExceptionCode&);
